# SpeakSmart

./: .gitignore  AGENT.md  AGENTS.md  SpeakSmart_Project_Documentation.md  package.json
Backend/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  speaksmart.dump
Backend/alembic/: env.py
Backend/alembic/versions/: 7b74e56695e6_add_attempt_verification_fields.py  959d2ec5ea6a_no_schema_change.py  b557a1db36d2_initial_schema.py  c1a2d3e4f5a6_add_recognized_text_romaji_fields.py  e6b7c4c9a123_add_class_memberships_and_join_codes.py  f4c2b7a91d11_add_assignment_submissions.py  f6b2c4d8a9e1_add_pronunciation_guidance_fields.py
Backend/app/: config.py  main.py
Backend/app/api/v1/: router.py
Backend/app/core/: config.py  dependencies.py  exceptions.py  limiter.py
Backend/app/db/: base.py  session.py
Backend/app/schemas/: analytics.py  assignment_submission.py  attempt.py  class_.py  exercise.py  module.py  phrase.py  progress.py  user.py
Backend/app/services/: asr.py  azure_pronunciation.py  firebase.py  firebase_auth.py  hf_phoneme_recognizer.py  phoneme_assessment.py  pitch_accent.py  progress.py  pronunciation.py  pronunciation_benchmark.py  r2_storage.py  scoring.py  speech.py  verification.py
Backend/scripts/: fill_certificate_pdf.py  get_test_token.py  phrase_data.py  prefetch_whisper_model.py  run_pronunciation_benchmark.py  seed_phrases.py  test_r2.py  test_scoring.py
Backend/tests/: conftest.py  test_phoneme_assessment.py  test_progress_filters.py  test_pronunciation.py  test_pronunciation_benchmark.py  test_verification.py
(+107 files in other folders)
